<resources>
	<string name="nav_patient_list">Patient List</string>
	<string name="nav_privacy_policy">Privacy Policy</string>
	<string name="nav_find_patient">Find Patient Record</string>
	<string name="action_settings">Settings</string>
	<string name="action_logout">Logout</string>
	<string name="uri_privacy_policy">https://www.bandahealth.org/privacy-policy</string>
	<string name="dbname">openmrs.db</string>
	<string name="aadbname">aaopenmrs.db</string>
	<string name="login_url_hint">URL address</string>
	<string name="login_location_select">Session Location</string>
	<string name="warning_dialog_title">Warning</string>
	<string name="warning_lost_data_dialog">Changing the URL or username will erase all the data. Are you sure?</string>
	<string name="forgot_dialog_title">Unable to login?</string>
	<string name="forgot_dialog_message">Please contact the system administrator</string>
	<string name="forgot_button_ok">Dismiss</string>
	<string name="login_offline">Offline</string>
	<string name="login_online">Online</string>
	<string name="emptyerror">Required</string>
	<string name="reg_firstname_hint">Given Name</string>
	<string name="reg_midname_hint">Middle Name</string>
	<string name="reg_surname_hint">Family Name</string>
	<string name="reg_file_hint">File Number</string>
	<string name="label_or">Or</string>
	<string name="reg_ques_phno">Phone number</string>
	<string name="reg_address">Address</string>
	<string name="reg_nationality">Nationality</string>
	<string name="reg_ward">Ward:</string>
	<string name="reg_clinic">Clinic</string>
	<string name="emergency_contact">Emergency Contact</string>
	<string name="addr2_hint">Address 2</string>
	<string name="atleastone">Fill at least one field</string>
	<string name="male">Male</string>
	<string name="female">Female</string>
	<string name="dob_hint">Date of Birth</string>
	<string name="estyr">Estimated Years</string>
	<string name="estmonth">Estimated Months</string>
	<string name="capture_photo">Capture photo</string>
	<string name="offline_mode_unsupported_in_first_login">Offline mode is not supported during first login.Enable online mode and then try again.</string>
	<string name="auth_failed_dialog_message">Incorrect username or password entered. Please try again.</string>
	<string name="no_internet_conn_dialog_message">You have no internet connection.\nPlease check phone or Wi-Fi connection and signal strength and try again.</string>
	<string name="no_internet_exit">Exit</string>
	<string name="no_internet_open_settings">Open Settings</string>
	<string name="similar_patients_dialog_title">Similar patients found</string>
	<string name="similar_patients_dialog_message">Choose existing patients or create a new one</string>
	<string name="socket_exception_dialog_title">Connection Failed</string>
	<string name="socket_exception_dialog_message">A connection error has occurred .\nPlease try again in a few seconds.</string>
	<string name="invalid_url_dialog_message">Cannot find server. Please check the URL and try again.</string>
	<string name="server_error_dialog_message">Server error occurred.\nPlease check the URL or internet connection and try again.</string>
	<string name="logout_dialog_title">Logging out</string>
	<string name="logout_dialog_message">Are you sure you want to logout from OpenMRS client?</string>
	<string name="logout_dialog_button">Logout</string>
	<string name="end_visit_dialog_title">End Visit</string>
	<string name="end_visit_dialog_message">Are you sure you want to end this visit?</string>
	<string name="start_visit_dialog_title">Start Visit</string>
	<string name="start_visit_dialog_message">Are you sure you want to start visit for %1$s now?</string>
	<string name="start_visit_unsuccessful_dialog_title">Visit didn\'t start.</string>
	<string name="start_visit_unsuccessful_dialog_message">There are already active visits of %1$s. Try synchronizing patient or closing previous visits</string>
	<string name="progress_dialog_message">Please wait</string>
	<string name="delete_patient_dialog_message">Are you sure you want to delete this patient?</string>
	<string name="dialog_button_cancel">Cancel</string>
	<string name="dialog_button_ok">OK</string>
	<string name="dialog_button_confirm">Confirm</string>
	<string name="dashboard_search_icon_label">Find Patients</string>
	<string name="dashboard_registry_icon_label">Register Patient</string>
	<string name="dashboard_visits_icon_label">Active Visits</string>
	<string name="dashboard_forms_icon_label">Form Entry</string>
	<string name="action_update_patient_data">Update Patient</string>
	<string name="action_start_visit">Start visit</string>
	<string name="patient_scroll_tab_vitals_label">Vitals</string>
	<string name="dash">  --  </string>
	<string name="active_visit_label">Active Visit</string>
	<string name="no_diagnoses_label">No diagnoses</string>
	<string name="diagnosis_note_label">Text of encounter note</string>
	<string name="visit_note">Visit Note</string>
	<string name="add_a_note">Add a note</string>
	<string name="label_more">More</string>
	<string name="label_patient_id">Patient ID</string>
	<string name="start_visit_date">Start Visit Date</string>
	<string name="end_visit_date">End Visit Date</string>
	<string name="action_delete_patient">Delete Patient</string>
	<string name="action_register_patient">Register Patient</string>
	<string name="gender_hint">Gender:</string>
	<string name="birthdate_hint">Birthdate:</string>
	<string name="address_hint">Address:</string>
	<string name="demographics">Demographics</string>
	<string name="no_patient_selected">No patient selected</string>
	<string name="matching_patients_toolbar_tittle">Merge Patients</string>
	<string name="patient_registered_locally">Patient registered locally</string>
	<string name="similar_patients_on_server">Similar patients exist on server</string>
	<string name="registration_core_info">To use faster and more accurate similar patient resolution, upgrade the Registration Core Module to 1.7 or higher</string>
	<string name="toast_with_black_background">Toast with black background</string>
	<string name="edit_form">Edit form</string>
	<string name="patient_photo">Patient Photo</string>
	<string name="visit_encounter_icon">Visit encounter Icon</string>
	<string name="visit_status_icon">Status of visit</string>
	<string name="show_or_hide_visit_details">Show/Hide visit details</string>
	<string name="snackbar_action_open">Open</string>
	<string name="snackbar_info_patient_downloaded">Patient downloaded</string>
	<string name="external_storage_not_available">Unable to take photos</string>
	<string name="permission_camera_rationale">Camera permission is needed to capture photo.</string>
	<string name="permission_camera_denied">Camera permission was denied. Please consider granting it in order to access the camera</string>
	<string name="permission_camera_neverask">Camera permission was denied with never ask again</string>
	<string name="permission_write_external_storage_denied">Writing extneral storage permission was denied. Please consider granting it in order to take pictures</string>
	<string name="button_allow">Allow</string>
	<string name="button_deny">Deny</string>
	<string name="app_name">Banda Health IM</string>
	<string name="username">Username</string>
	<string name="password">Password</string>
	<string name="login">Login</string>
	<string name="create_account">No account yet? Create one</string>
	<string name="search_hint">Search patients</string>
	<string name="sync_hint">Sync selections</string>
	<string name="action_delete_image">Delete</string>
	<string name="nav_register_patient">Register Patient</string>
	<string name="nav_open_visit_tasks">Open Visit Tasks</string>
	<string name="nav_closed_visit_tasks_period">Date Closed: %1$s</string>
	<string name="nav_settings">Settings</string>
	<string name="nav_visit_details">Visit Details</string>
	<string name="title_patient_dashboard">Patient Dashboard</string>
	<string name="title_audit_data_form">Audit Data Form</string>
	<string name="title_settings">Settings</string>
	<string name="label_close">Close</string>
	<string name="label_open">Open</string>
	<string name="label_age">Age:</string>
	<string name="label_gender">Gender</string>
	<string name="label_diagnoses">Diagnoses</string>
	<string name="label_vitals">Vitals</string>
	<string name="label_appointments">Appointments</string>
	<string name="label_recent_visits">Recent Visits</string>
	<string name="label_bills">Bills</string>
	<string name="label_allergies">Allergies</string>
	<string name="label_active">Active</string>
	<string name="label_add_visit">Add Visit</string>
	<string name="label_add_diagnosis">Add Diagnosis</string>
	<string name="label_audit_data">Audit Data Form</string>
	<string name="label_add_image">Add Image</string>
	<string name="label_end_visit">End Visit</string>
	<string name="label_add_task">Add Task</string>
	<string name="label_height">Height</string>
	<string name="label_weight">Weight</string>
	<string name="label_bmi">(Calculated)BMI</string>
	<string name="label_temperature">Temperature</string>
	<string name="label_pulse">Pulse</string>
	<string name="label_respiratory_rate">Respiratory rate</string>
	<string name="label_blood_presure">Blood Pressure</string>
	<string name="label_blood_oxygen_saturation">Blood Oxygen Saturation</string>
	<string name="label_address">Address:</string>
	<string name="label_address_2">Address 2</string>
	<string name="label_city">City</string>
	<string name="label_province">Province</string>
	<string name="label_country">Country</string>
	<string name="label_postal_code">Postal Code</string>
	<string name="label_save">Save</string>
	<string name="label_previous_visits">Previous Visits</string>
	<string name="label_tasks">Tasks</string>
	<string name="label_complete">Complete</string>
	<string name="some_title">Some Title</string>
	<string name="some_summary">Some Summary</string>
	<string name="pref_user_profile">User Profile</string>
	<string name="pref_send_report">Send crash reports</string>
	<string name="pref_send_report_summary">Helps to fix bugs</string>
	<string name="pref_sync_frequency">Sync frequency</string>
	<string name="pref_sync_frequency_summary">Set the sync frequency</string>
	<string name="pref_user_name">Set username</string>
	<string name="pref_user_name_summary">Set your username</string>
	<string name="pref_update_setting">Update Settings</string>
	<string name="snackbar_edit">EDIT</string>
	<string name="invalid_login_or_password_message">Invalid login or password, please try again.</string>
	<string name="logout_due_to_inactivity">You have been logged out due to inactivity.</string>
	<string name="settings_application_info">Application Info</string>
	<string name="settings_concepts_info">Concepts Info</string>
	<string name="settings_concepts_in_db">Concepts in DB:</string>
	<string name="action_starting_visit">"Starting Visit"</string>
	<string name="patient_identifier"># %1$s</string>
	<string name="patient_contact_info_label">Contact Information</string>
	<string name="matching_patients_toolbar_title">Merge Patients</string>
	<string name="snackbar_no_internet_connection">No internet connection</string>
	<string name="patient_not_yet_registered">Patient not yet registered, cannot create encounter.</string>
	<string name="sync">Sync</string>
	<string name="sync_on">Sync on</string>
	<string name="sync_off">Sync off</string>
	<string name="no_network_and_no_patient_data_in_database">Patient not synced</string>
	<string name="patient_dashboard_sync_age_display">Last synced %1$s</string>
	<string name="patient_dashboard_sync_age_display_not_available">Sync information unavailable</string>
	<string name="label_edit_visit">Edit Visit</string>
	<string name="label_capture_vitals">Capture Vitals</string>
	<string name="audit_data_form_label">Audit Data</string>
	<string name="change_server_url">Change Server URL</string>
</resources>