<?xml version="1.0" encoding="utf-8"?><!--
  ~ The contents of this file are subject to the OpenMRS Public License
  ~ Version 1.0 (the "License"); you may not use this file except in
  ~ compliance with the License. You may obtain a copy of the License at
  ~ http://license.openmrs.org
  ~
  ~ Software distributed under the License is distributed on an "AS IS"
  ~ basis, WITHOUT WARRANTY OF ANY KIND, either express or implied. See the
  ~ License for the specific language governing rights and limitations
  ~ under the License.
  ~
  ~ Copyright (C) OpenMRS, LLC.  All Rights Reserved.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android">
	<data>
		<variable
				name="viewModel"
				type="org.openmrs.mobile.activities.login.LoginActivity"/>
	</data>
	<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:gravity="center"
			android:focusable="true"
			android:focusableInTouchMode="true"
			android:orientation="vertical">

		<ProgressBar
				android:visibility="gone"
				android:id="@+id/locationLoadingProgressBar"
				style="@style/Widget.AppCompat.ProgressBar.Horizontal"
				android:layout_width="match_parent"
				android:layout_height="30dp"
				android:layout_marginTop="-20dp"
				android:indeterminate="true" />

		<ScrollView
				android:id="@+id/viewsContainer"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_alignTop="@+id/locationLoadingProgressBar"
				android:layout_alignParentLeft="true"
				android:layout_alignParentStart="true">

			<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical"
					android:layout_gravity="center"
					android:paddingLeft="24dp"
					android:paddingRight="24dp">

				<ImageView
						android:id="@+id/bandaHealthLogo"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:adjustViewBounds="true"
						android:scaleType="fitCenter"
						android:layout_marginBottom="24dp"
						android:contentDescription="@string/app_name"
						android:src="@drawable/banda_logo" />

				<android.support.design.widget.TextInputLayout
						android:id="@+id/loginUrlTextLayout"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginBottom="8dp"
						android:layout_marginTop="8dp">

					<android.support.design.widget.TextInputEditText
							android:imeOptions="actionDone"
							android:id="@+id/loginUrlField"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:hint="@string/login_url_hint"
							android:inputType="text|textUri"
							android:text="@{viewModel.loginUrl}"/>
				</android.support.design.widget.TextInputLayout>

				<android.support.design.widget.TextInputLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginBottom="8dp"
						android:layout_marginTop="8dp">

					<android.support.design.widget.TextInputEditText
							android:imeOptions="actionDone"
							android:id="@+id/loginUsernameField"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:hint="@string/username"
							android:inputType="text"
							android:text="@{viewModel.username}"/>
				</android.support.design.widget.TextInputLayout>

				<RelativeLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content">

					<android.support.design.widget.TextInputLayout
							android:id="@+id/textInputLayoutPassword"
							android:layout_width="fill_parent"
							android:layout_height="wrap_content"
							android:layout_alignParentTop="true">

						<android.support.design.widget.TextInputEditText
								android:layout_width="fill_parent"
								android:layout_height="wrap_content"
								android:focusable="true"
								android:imeOptions="actionDone"
								android:id="@+id/loginPasswordField"
								android:hint="@string/password"
								android:maxLines="1"
								android:text="@{viewModel.password}"
								android:inputType="@{viewModel.passwordInputType}"/>

					</android.support.design.widget.TextInputLayout>

					<CheckBox
							android:id="@+id/checkboxShowPassword"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_alignEnd="@id/textInputLayoutPassword"
							android:layout_alignRight="@id/textInputLayoutPassword"
							android:layout_marginTop="10dp"
							android:button="@drawable/showpassword_button_selector"
							android:gravity="bottom"
							android:paddingLeft="10dp"
							android:paddingRight="10dp"
							android:checked="@{viewModel.showPassword}"/>
				</RelativeLayout>

				<android.support.v7.widget.AppCompatSpinner
						android:prompt="@string/login_location_select"
						android:id="@+id/locationSpinner"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:spinnerMode="dialog"
						style="@style/Widget.AppCompat.Spinner.Underlined"
						android:layout_marginTop="20dp" />


				<android.support.v7.widget.AppCompatButton
						android:enabled="false"
						android:id="@+id/loginButton"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginBottom="24dp"
						android:layout_marginTop="24dp"
						android:padding="12dp"
						android:textColor="@color/color_white"
						android:background="@drawable/button_submit"
						android:text="@string/login"
						style="@style/Widget.AppCompat.Button.Borderless" />

				<TextView
						android:id="@+id/changeUrlIcon"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:text="@string/change_server_url"
						android:textColor="@color/primary_dark"
						android:layout_gravity="center_horizontal"
						android:gravity="center_horizontal"/>

			</LinearLayout>
		</ScrollView>

	</RelativeLayout>

</layout>
